fix a widget default min-height for them to be always visible in the whiteboard

--- a/frontend/app/less/widget.less
+++ b/frontend/app/less/widget.less
@@ -148,6 +148,7 @@
 
 .widget-content {
   overflow-x: hidden;
+  min-height: 25px;
 }
 
 /** improve wysiwyg in editor */
